[package]
name = "ssedit"
version = "0.2.0"
edition = "2021"
authors = ["Chris Tomich <contact@christomich.com>"]
description = """
A stream editor for structured data formats like JSON, YAML, and INI that retains all original formatting and will
retain original tabs/spaces/line ending formats.
"""
homepage = "https://github.com/chris-tomich/ssedit"
repository = "https://github.com/chris-tomich/ssedit"
documentation = "https://github.com/chris-tomich/ssedit"
license = "MIT"
keywords = ["stream", "editor", "json"]
categories = ["command-line-utilities", "text-editors", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.0"
lazy_static = "1.4.0"